k8s/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ec2shop
  namespace: opty
spec:
  selector:
    app: ec2shop
  ports:
    - protocol: TCP
      port: 6000
      name: web


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ec2shop
  namespace: opty
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - ec2.shop
    # secretName: ec2shop-tls-secret
  rules:
  - host: ec2.shop
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ec2shop
            port:
              name: web
